trying to fix bug with grid on ios

--- a/src/components/modules/ProjectCard/ProjectCard.module.scss
+++ b/src/components/modules/ProjectCard/ProjectCard.module.scss
@@ -110,6 +110,12 @@
     flex-direction: column;
 }
 
+.wrapperGrid {
+    @media (max-width: $md) {
+        height: auto;
+    }
+}
+
 .blockSmall {
     display: flex;
     flex-direction: column;
